<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_menu_instruction_text" />

    <ExpandableListView
        android:id="@+id/helpExpandableListView"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.05" >
    </ExpandableListView>

    <Button
        android:id="@+id/donateButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/donate_button" />

</LinearLayout>