<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:theme="@android:style/Theme.NoTitleBar" >

    <TextView
        android:id="@+id/busStopName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/busStopU1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:background="@drawable/u1_back"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/U1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/busStopU1N"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/u1n_back"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/U1N"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/busStopU2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/u2_back"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/U2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/busStopU6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/u6_back"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/U6"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/busStopU9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/u9_back"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/U9"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />

        <CheckBox
            android:id="@+id/favouriteCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bustimes_favourite_checkbox_label" />

        <TextView
            android:id="@+id/busStopID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/busTimeContentLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/busStopMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ProgressBar
            android:id="@+id/busStopLoadBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/busStopTimes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

</LinearLayout>