<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:theme="@android:style/Theme.NoTitleBar" >

    <LinearLayout
        android:id="@+id/busActivityHeaderLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/busActivityBusID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/busActivityU1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/u1_back_selected"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/U1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/busActivityU1N"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/u1n_back_selected"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/U1N"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/busActivityU2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/u2_back_selected"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/U2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/busActivityU6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/u6_back_selected"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/U6"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/busActivityU9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/u9_back_selected"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/U9"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/busActivityContentLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/busActivityMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ListView
            android:id="@+id/busActivityTimes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </ListView>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/busActivityCenterLoadBar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/busActivityLoadBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>